src/crode/test/invalid/invalidForLoopStep.crode
canvas "InvalidForLoopStep" width 800 height 600 {
  let dot = circle {
    radius 5
    color black
  }

  for i in 0 to 8 step 0 {
    draw dot at (100, 100)
  }
}
